infra/k8s/post.yaml
apiVersion: v1
kind: Pod
metadata:
  name: post
spec:
  containers:
    - name: post
      image: nayeemnishaat/post:latest
      imagePullPolicy: Never
