infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: nayeemnishaat/moderation:v1
          imagePullPolicy: Never
          resources:
            limits:
              memory: 200Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-svc
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 7000
      targetPort: 7000
