infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: nayeemnishaat/query:v1
          imagePullPolicy: Never
          resources:
            limits:
              memory: 200Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: query-svc
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 8000
      targetPort: 8000
