infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: post.com # Add localhost/minikube ip to the etc/hosts file -> 192.168.49.2    post.com
      http:
        paths:
          - path: /post/create
            pathType: Prefix
            backend:
              service:
                name: post-clusterip-svc
                port:
                  number: 4000
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: query-svc
                port:
                  number: 8000
          - path: /post/?(.*)/comment
            pathType: Prefix
            backend:
              service:
                name: comment-svc
                port:
                  number: 5000
          - path: /?(.*) # Important: For SPA we need query so that always the react application is shown when no other matches. And this path should be at the end else always this path will be called.
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
